client/src/components/HomeComponents/AnimatedBackgrounds/_gradient_brackground.scss
@keyframes rotate {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  
  .gradient {
    --size: 100%;
    --speed: 50s;
    --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
    z-index: 1;
    width: var(--size);
    height: var(--size);
    filter: blur(calc(var(--size) / 5));
    background-image: linear-gradient(hsl(158, 82, 57, 85%), hsl(252, 82, 57));
    animation: rotate var(--speed) var(--easing) alternate infinite;
    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
  }
  
  @media (min-width: 720px) {
    .gradient {
      --size: 50px;
    }
  }

  @media (min-width: 300px) {
    .gradient {
      --size: 50px;
    }
  }

  @media (max-width: 100px) {
    .gradient {
      --size: 20px;
    }
  }
  
  .gradient_background{
    // background-color: #222;
    perspective: 340px;
    position: absolute;
    inset: 0;
    display: flex;
    place-content: center;
    align-items: center;
    overflow: hidden;
    z-index: 10001;
  }
  
  /* This is just to transition when you change the viewport size. */
  * {
    transition: all 0.25s ease-out;
  }

